# solana-simple-escrow

./: .gitignore
js/: README.md  package.json
js/src/: App.vue  helper.js  main.js  play-bn.js  sol-api.js  wallet-api.js
js/src/views/: About.vue
rs/: Cargo.toml  README.md
rs/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
rs/tests/: integration.rs
