[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.7.4"
thiserror = "1.0.24"
#importing another program that has its own entrypoint
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[features]
no-entrypoint = [] # in case others want to use our lib without the entrypoint
#test-bpf = []

#[dev-dependencies]
#assert_matches = "1.4.0"
#solana-program-test = "1.7.4"
#solana-sdk = "1.7.4"
#solana-validator = "1.7.4"

[lib]
crate-type = ["cdylib", "lib"]
